deploy/kubernetes/jupyterhub-services.yaml
# External JupyterHub UI Service definition
apiVersion: v1
kind: Service
metadata:
  name: jupyterhub
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
    targetPort: jupyter-http
  selector:
    application: jupyterhub
---
# Internal JupyterHub API Service definition
apiVersion: v1
kind: Service
metadata:
  name: jupyterhub-internal
spec:
  ports:
  - port: 8081
    name: http
    # Use named container port.
    targetPort: jupyter-in
  selector:
    application: jupyterhub
