deploy/kubernetes/rook-ceph-services.yaml
apiVersion: v1
kind: Service
metadata:
    name: rook-ceph-mgr-dashboard-external-https
    namespace: rook-ceph
    labels:
    app: rook-ceph-mgr
    rook_cluster: rook-ceph
spec:
    ports:
    - name: dashboard
    port: 8443
    protocol: TCP
    targetPort: 8443
    selector:
    app: rook-ceph-mgr
    rook_cluster: rook-ceph
    sessionAffinity: None
    type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    name: rook-ceph-ui
    namespace: rook-ceph
spec:
    rules:
    - host: ROOK_CEPH_URL_VALUE
    http:
        paths:
        - backend:
            serviceName: rook-ceph-mgr-dashboard-external-https
            servicePort: 8443
        path: /
